--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 $font: 'Lato', sans-serif;
 
-$white: #f5f5f5;
+$white: #fffcf9;
 $light: #f3e7e9;
-$tan: #d6a4a4;
-$darkblu: #ccd7f5;
-$blue: #dae2f8;
-$dark: #4e4e4e;
+$font: #003049;
+$primary: #f77f00;
+$secondary: #fcbf49;
+$box: #eae2b7;
 
 html,
 body {
@@ -14,39 +14,250 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: $light;
+  background: $white;
   font-family: $font, sans-serif;
 }
 
-.ant {
-  width: 32rem;
-  height: 10rem;
-  background: $white;
-  box-shadow: 5px 5px 15px rgba($blue, 0.5);
-  border-radius: 10px;
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  border: 2px solid $blue;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
 .ant-list {
-  margin: 0;
   min-width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 1rem;
-  margin: 0 1rem 0 1rem;
+  margin: 1rem;
+}
+.ant {
+  border-radius: 4px;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  background: #ca7c4e;
+  background: -webkit-linear-gradient(
+    bottom left,
+    $secondary 0%,
+    $primary 100%
+  );
+  background: -moz-linear-gradient(bottom left, $secondary 0%, $primary 100%);
+  background: -o-linear-gradient(bottom left, $secondary 0%, $primary 100%);
+  background: linear-gradient(to top right, $secondary 0%, $primary 100%);
+  color: $font;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  float: left;
+  width: 8.5rem;
+  height: 20rem;
+  text-align: center;
+}
+.image {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  margin: 1rem auto 0 auto;
+  right: 2rem;
+}
+svg {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+}
+
+.circle-2 {
+  position: absolute;
+  left: -0.75rem;
+  top: -7px;
+  width: 3rem;
+  height: 3rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $font transparent $font $font;
+  border-radius: 50%;
+  transition: all 1.5s ease-in-out;
+  &:hover {
+    cursor: pointer;
+    transform: rotate(360deg);
+  }
+}
+
+.circle-1 {
+  // @extend .circle-1;
+  position: absolute;
+  left: -0.75rem;
+  top: -7px;
+  width: 3.1rem;
+  height: 3.1rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $font $font $font transparent;
+  border-radius: 50%;
+  transition: all 1.5s ease-in-out;
+
+  &:hover {
+    transform: rotate(-360deg);
+  }
 }
 
 #name {
-  font-size: 1.2em;
-  color: $dark;
+  font-size: 0.5rem;
+  color: $font;
   text-transform: uppercase;
+  font-weight: 600;
+  height: 12rem;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  text-align: left;
+  margin-top: 3rem;
+}
+
+#color {
+  font-size: 0.675rem;
+  line-height: 1rem;
+}
+
+.btn-wrapper {
+  top: 0.6rem;
+  position: absolute;
+  left: 2.75rem;
+}
+
+.btn {
+  display: block;
+  width: 4rem;
+  height: 1.175rem;
+  margin: 0 auto 10px auto;
+  background: $white;
+  border: 1px solid $font;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: 600;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
+  color: $font;
+  &:hover {
+    cursor: pointer;
+    background: $box;
+    color: $primary;
+  }
+}
+
+#get-all {
+  width: 5rem;
+  color: $white;
+  background-color: $primary;
+  &:hover {
+    background-color: $box;
+    color: $primary;
+  }
+}
+
+#stats-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  bottom: 13.75rem;
+  right: 0.25rem;
+  float: right;
+  border-radius: 8px;
+  border: 4px solid $white;
+}
+.stats {
+  float: left;
+}
+
+.box {
+  box-sizing: border-box;
+  width: 120px;
+  height: 99px;
+  background: $white;
+  text-align: center;
+  padding-top: 28px;
+  transition: all 0.4s ease-in-out;
+
+  &:hover {
+    background: $box;
+    cursor: pointer;
+    color: $primary;
+  }
+
+  &:nth-child(2) {
+    margin: 1px 0;
+  }
+}
+
+span {
+  display: block;
+}
+
+.value {
+  font-size: 0.5rem;
+  font-weight: 600;
+}
+
+.parameter {
+  font-size: 11px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0.15rem;
+}
+
+.loading {
+  display: flex;
+  flex-direction: row;
+}
+
+.loading__letter {
+  font-size: 0.5rem;
+  font-weight: normal;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  animation-name: bounce;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  font-weight: bold;
+  color: #d62828;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  40% {
+    transform: translateY(-40px);
+  }
+  80%,
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.loading__letter:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.loading__letter:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.loading__letter:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.loading__letter:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.loading__letter:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.loading__letter:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.loading__letter:nth-child(8) {
+  animation-delay: 0.8s;
+}
+.loading__letter:nth-child(9) {
+  animation-delay: 1s;
+}
+.loading__letter:nth-child(10) {
+  animation-delay: 1.2s;
 }
