--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -261,3 +261,44 @@ span {
 .loading__letter:nth-child(10) {
   animation-delay: 1.2s;
 }
+
+#ants {
+  margin: 0 auto;
+  animation-name: race;
+  animation-duration: 2s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+  top: 50rem;
+}
+
+@keyframes race {
+  0% {
+    transform: translateX(-50px);
+  }
+  40% {
+    transform: translateX(-300px);
+  }
+  80%,
+  100% {
+    transform: translateX(-400px);
+  }
+}
+
+.error {
+  width: 15rem;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 37%;
+  color: $font;
+  border-radius: 8px;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  background-color: $box;
+}
+
+#error-container {
+  margin-top: 5rem;
+}
