--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -12,8 +12,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 90vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background: $white;
   font-family: $font, sans-serif;
 }
@@ -53,28 +53,33 @@ body {
     height: 90vh;
   }
 }
+
 .image {
   position: relative;
   width: 2rem;
   height: 2rem;
   margin: 1rem auto 0 auto;
-  right: 6rem;
-  flex: 1;
+  right: 3.5rem;
+
   @media (min-width: 1600px) {
     width: 20%;
+    right: 6rem;
+    flex: 1;
   }
 }
 
 svg {
   position: absolute;
-  top: 0.25rem;
-  right: 0.25rem;
   flex: 1;
+  @media (min-width: 1600px) {
+    top: 0.25rem;
+    left: 0.25rem;
+  }
 }
 
 .circle-2 {
   position: absolute;
-  left: -0.75rem;
+  // left: -0.75rem;
   top: -7px;
   width: 3rem;
   height: 3rem;
@@ -96,7 +101,7 @@ svg {
 .circle-1 {
   // @extend .circle-1;
   position: absolute;
-  left: -0.75rem;
+  // left: -0.75rem;
   top: -7px;
   width: 3.1rem;
   height: 3.1rem;
@@ -140,7 +145,7 @@ svg {
 .btn-wrapper {
   top: 0.6rem;
   position: absolute;
-  left: 2.75rem;
+  left: 4.8rem;
   @media (min-width: 1600px) {
     left: 2rem;
     top: 53.6rem;
@@ -318,18 +323,32 @@ span {
   animation-timing-function: ease;
   animation-iteration-count: infinite;
   top: 50rem;
+  @media (min-width: 1600px) {
+    @keyframes race {
+      0% {
+        transform: translateX(-50px);
+      }
+      40% {
+        transform: translateX(-300px);
+      }
+      80%,
+      100% {
+        transform: translateX(-400px);
+      }
+    }
+  }
 }
 
 @keyframes race {
   0% {
-    transform: translateX(-50px);
+    transform: translateX(1000px);
   }
   40% {
-    transform: translateX(-300px);
+    transform: translateX(800px);
   }
   80%,
   100% {
-    transform: translateX(-400px);
+    transform: translateX(200px);
   }
 }
 
